Settings Server Routes Updated

--- a/Frontend/easybank/src/app/components/settings/settings.component.html
+++ b/Frontend/easybank/src/app/components/settings/settings.component.html
@@ -94,7 +94,7 @@
             <div class="settings-container">
 
               <!--SECURITY SETTINGS-->
-              <form class="registerform" (ngSubmit)="onSecurityFormSubmit() "#security="ngForm">
+              <form class="registerform" (ngSubmit)="onSecurityFormSubmit() "#securityform="ngForm">
                   <section class="login-section">
                       <h2>Security Settings</h2>
                   </section>
