--- a/Frontend/easybank/src/app/components/settings/settings.component.css
+++ b/Frontend/easybank/src/app/components/settings/settings.component.css
@@ -9,14 +9,20 @@
     margin-top:2rem;
 }
 
+.settings-container p {
+    font-size: 1.5rem;
+}
+
 main h2{
 
     font-size: 2rem;
+    font-weight: 500;
 
 }
 
 .login-section h2{
     margin-bottom: 1rem;
+    font-weight: 500;
 }
 
 .cards-section{
@@ -25,6 +31,7 @@ main h2{
 
 main h3 {
     margin-bottom:2rem;
+    font-weight: 500;
 }
 
 form{
