--- a/Frontend/easybank/src/app/components/footer/footer.component.html
+++ b/Frontend/easybank/src/app/components/footer/footer.component.html
@@ -15,9 +15,9 @@
             <h3 class="footer__title">Information</h3>
             <ul>
                 <li><a routerLink='/home' class="footer__link">Home</a></li>
-                <li><a routerLink='/home' class="footer__link">About Us</a></li>
-                <li><a routerLink='/listings' class="footer__link">Car Listings</a></li>
-                <li><a routerLink='/contact' class="footer__link">Contact us</a></li>
+                <li><a routerLink='/home' class="footer__link">Services</a></li>
+                <li><a routerLink='/listings' class="footer__link">Features</a></li>
+                <li><a routerLink='/login' class="footer__link">Sign In</a></li>
                 <!-- <li><a href="#" class="footer__link">Terms of services</a></li> -->
             </ul>
         </div>
