--- a/Frontend/easybank/src/styles.css
+++ b/Frontend/easybank/src/styles.css
@@ -87,6 +87,10 @@ a{
     text-decoration: none;
 }
 
+.uppercase{
+  text-transform: capitalize;
+}
+
     @media screen and (min-width: 768px){
 
     :root{
